--- a/inst/libraries/nvd3/layouts/chart.html
+++ b/inst/libraries/nvd3/layouts/chart.html
@@ -37,6 +37,8 @@
         
         {{{ yAxis }}}
       
+       {{{ y2Axis }}}
+       
        d3.select("#" + opts.id)
         .append('svg')
         .datum(data)
